[tool.poetry]
name = "posts"
version = "0.1.0"
description = ""
authors = ["SirSilver <ace.cold.yo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
httpx = "^0.22.0"
pytest-asyncio = "^0.18.3"
Faker = "^13.3.4"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
