[tool.poetry]
name = "posts"
version = "0.1.0"
description = ""
authors = ["SirSilver <ace.cold.yo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.35"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
httpx = "^0.22.0"
pytest-asyncio = "^0.18.3"
Faker = "^13.3.4"
black = "^22.3.0"
flake8 = "^4.0.1"
sqlalchemy2-stubs = "^0.0.2-alpha.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
